# never-leak-protocol

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATIONS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  spec_feedback.md
.github/workflows/: deploy-website.yml  publish-pypi.yml
docs/adoption/: DEVELOPER-GUIDE.md  PLATFORM-GUIDE.md
docs/governance/: CERTIFICATION.md
docs/roadmap/: ROADMAP.md
reference/python/: README.md  pyproject.toml
reference/python/conformance/: __init__.py  conftest.py  test_level1_identity.py  test_level2_access.py  test_level3_isolation.py  test_level4_defense.py  test_level5_audit.py  test_level6_detection.py  test_level7_federation.py  test_level8_wire.py
reference/python/examples/: attestation_example.py  full_pipeline.py  quickstart.py
reference/python/src/nl_protocol/: __init__.py  provider.py
reference/python/src/nl_protocol/access/: __init__.py  actions.py  placeholders.py  policy.py  sanitization.py  scope_grants.py
reference/python/src/nl_protocol/audit/: __init__.py  chain.py  hmac.py  migration.py  records.py  verification.py
reference/python/src/nl_protocol/core/: __init__.py  config.py  errors.py  interfaces.py  types.py
reference/python/src/nl_protocol/defense/: __init__.py  deny_rules.py  pattern_engine.py  validation.py
reference/python/src/nl_protocol/detection/: __init__.py  behavioral.py  honeypot.py  response.py  threat_scoring.py
reference/python/src/nl_protocol/federation/: __init__.py  cascade.py  delegation.py  nonce.py  token_binding.py  verification.py
reference/python/src/nl_protocol/identity/: __init__.py  aid.py  attestation.py  lifecycle.py  trust_levels.py
reference/python/src/nl_protocol/isolation/: __init__.py  environment.py  memory.py  sandbox.py  subprocess.py
reference/python/src/nl_protocol/wire/: __init__.py  discovery.py  http.py  messages.py  ndjson.py
reference/python/tests/: test_access.py  test_audit.py  test_defense.py  test_detection.py  test_federation.py  test_identity.py  test_isolation.py  test_provider.py  test_wire.py
specification/v1.0/: 00-overview.md  01-agent-identity.md  02-action-based-access.md  03-execution-isolation.md  04-pre-execution-defense.md  05-audit-integrity.md  06-attack-detection.md  07-cross-agent-trust.md  08-wire-protocol.md
website/: astro.config.mjs  package-lock.json  package.json
website/public/: llms-full.txt  llms.txt
website/src/components/: BraincolBadge.astro  Navbar.astro  ProtocolFlowAnimation.astro
website/src/pages/: index.astro
website/src/pages/get-started/: for-architects.astro  for-developers.astro  for-enterprises.astro  for-framework-builders.astro  for-product-teams.astro  index.astro
website/src/styles/: global.css
(+10 files in other folders)
