[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nl-protocol"
version = "1.0.0a3"
description = "Reference implementation of the Never-Leak Protocol for AI agent secret governance"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Braincol", email = "protocol@braincol.com" },
]
keywords = ["ai", "agents", "secrets", "security", "protocol", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "cryptography>=42.0,<44.0",
    "pyjwt[crypto]>=2.8,<3.0",
]

[project.optional-dependencies]
re2 = ["google-re2>=1.0"]
http = ["httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]
all = ["nl-protocol[re2,http]"]

[project.urls]
Homepage = "https://neverleakprotocol.org"
Repository = "https://github.com/braincol/never-leak-protocol"
Documentation = "https://neverleakprotocol.org/spec"
Specification = "https://github.com/braincol/never-leak-protocol/tree/main/specification/v1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/nl_protocol"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "PTH"]
ignore = ["S101", "S105", "S107", "S603", "S607", "N818"]  # Assert, test secrets, subprocess, exception naming per spec

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]  # Hardcoded passwords in tests are expected
"conformance/**" = ["S105", "S106", "N802"]  # Hardcoded passwords and MUST/MUST_NOT naming convention
"examples/**" = ["S105", "S106"]  # Hardcoded passwords in examples are expected

[tool.ruff.lint.isort]
known-first-party = ["nl_protocol"]

[tool.coverage.run]
source = ["nl_protocol"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
]
